--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://anushaHotkar:ORn5ri9LUVWJEr1@mernapp.qeec3bx.mongodb.net/lxn?retryWrites=true&w=majority&appName=MERNapp
+MONGO_URI=
 JWT_SECRET=yourSuperSecretKey123
 PORT=4000
